--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://andreilucaci.github.io/scriptum-deus/",
+  "homepage": "http://scriptumdeus.com/scriptum-deus/",
   "name": "scriptum-deus",
   "version": "0.1.0",
   "private": true,
