--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://scriptumdeus.com/scriptum-deus/",
+  "homepage": "http://scriptumdeus.com/",
   "name": "scriptum-deus",
   "version": "0.1.0",
   "private": true,
@@ -12,8 +12,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.2",
+    "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.17.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
@@ -26,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "generate:api": "npx ts-node -O '{\"module\": \"commonjs\"}' src/scripts"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "gh-pages": "^3.2.0"
   }
 }
